# audmodel

./: .buildinfo  .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  authentication.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  usage.html
.doctrees/: authentication.doctree  changelog.doctree  contributing.doctree  environment.pickle  genindex.doctree  index.doctree  installation.doctree  usage.doctree
.doctrees/__intersphinx_cache__/: audfactory_objects.inv  filelock_objects.inv
.doctrees/api/: audmodel.Repository.doctree  audmodel.aliases.doctree  audmodel.author.doctree  audmodel.config.doctree  audmodel.date.doctree  audmodel.default_cache_root.doctree  audmodel.doctree  audmodel.exists.doctree  audmodel.header.doctree  audmodel.latest_version.doctree  audmodel.legacy_uid.doctree  audmodel.load.doctree  audmodel.meta.doctree  audmodel.name.doctree  audmodel.parameters.doctree  audmodel.publish.doctree  audmodel.resolve_alias.doctree  audmodel.set_alias.doctree  audmodel.subgroup.doctree  audmodel.uid.doctree  audmodel.update_meta.doctree  audmodel.url.doctree  audmodel.version.doctree  audmodel.versions.doctree
.github/workflows/: doc.yml  test.yml
_modules/: index.html
_sources/api/: audmodel.Repository.rst.txt  audmodel.aliases.rst.txt  audmodel.author.rst.txt  audmodel.config.rst.txt  audmodel.date.rst.txt  audmodel.default_cache_root.rst.txt  audmodel.exists.rst.txt  audmodel.header.rst.txt  audmodel.latest_version.rst.txt  audmodel.legacy_uid.rst.txt  audmodel.load.rst.txt  audmodel.meta.rst.txt  audmodel.name.rst.txt  audmodel.parameters.rst.txt  audmodel.publish.rst.txt  audmodel.resolve_alias.rst.txt  audmodel.set_alias.rst.txt  audmodel.subgroup.rst.txt  audmodel.uid.rst.txt  audmodel.update_meta.rst.txt  audmodel.url.rst.txt  audmodel.version.rst.txt  audmodel.versions.rst.txt
api/: audmodel.Repository.html  audmodel.aliases.html  audmodel.author.html  audmodel.config.html  audmodel.date.html  audmodel.default_cache_root.html  audmodel.exists.html  audmodel.header.html  audmodel.html  audmodel.latest_version.html  audmodel.legacy_uid.html  audmodel.load.html  audmodel.meta.html  audmodel.name.html  audmodel.parameters.html  audmodel.publish.html  audmodel.resolve_alias.html  audmodel.set_alias.html  audmodel.subgroup.html  audmodel.uid.html  audmodel.update_meta.html  audmodel.url.html  audmodel.version.html  audmodel.versions.html
audmodel/: __init__.py
audmodel/core/: api.py  backend.py  config.py  conftest.py  define.py  interface.py  legacy.py  (+6 more)
docs/: api-audmodel.rst  api-interface.rst  api.rst  conf.py  index.rst  requirements.txt  tutorial.ipynb  usage.rst
tests/: config.py  conftest.py  default.py  requirements.txt  test_alias.py  test_api.py  test_create_lookup_table.py  test_default_cache_root.py  test_delete_lookup_table.py  test_extend_params.py  test_get_default_cache_root.py  test_get_lookup_table.py  test_get_model_id.py  test_get_model_url.py  test_interface_generic.py  test_interface_process.py  test_interface_process_with_context.py  test_interface_segment.py  test_legacy.py  test_legacy_uid.py  test_load.py  test_load_by_id.py  test_lock.py  test_lookup_table.py  test_parameters.py  test_params.py  test_publish.py  test_remove.py  test_repository.py  test_uid.py  test_update.py  test_url.py  test_versions.py
(+6 files in other folders)
