[metadata]
name = audmodel
author = Johannes Wagner, Hagen Wierstorf
author-email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://gitlab.audeering.com/tools/audmodel
project-urls =
    Documentation = http://tools.pp.audeering.com/audmodel/
description = Publish and load models
long-description = file: README.rst, CHANGELOG.rst
license = audEERING
license-file = LICENSE
keywords = machine learning, model, Artifactory
platforms= any
classifiers =
    Development Status :: 3 - Alpha
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audfactory >=0.5.6, <=0.7.0
    oyaml
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audmodel
    --cov-fail-under=100
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
    F541  # f-string is missing placeholders
