[metadata]
name = audmodel
author = Johannes Wagner, Hagen Wierstorf
author_email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://gitlab.audeering.com/tools/audmodel
project_urls =
    Documentation = http://tools.pp.audeering.com/audmodel/
description = Publish and load models
long_description = file: README.rst, CHANGELOG.rst
license = audEERING
license_file = LICENSE
keywords = machine learning, model, Artifactory
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audbackend[artifactory] >=1.0.0
    oyaml
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --doctest-plus
    --cov=audmodel
    --cov-fail-under=100
    --cov-report term-missing
xfail_strict = true

[flake8]
exclude =
    .eggs,
    build,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused imports
    __init__.py: F401,
